# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
2018/day-05/: day-05.py  readme.md
2024/day-01/: day-01.py
2024/day-03/: readme.md
2024/day-04/: day-04.py
2024/day-05/: readme.md
2024/day-06/: readme.md
2024/day-07/: day-07.py
2024/day-09/: readme.md
2024/day-11/: readme.md
aoc_tiles/: session.cookie
solutions/2015/day-01/: day-01.py
solutions/2015/day-02/: day-02.py
solutions/2015/day-03/: day-03.py
solutions/2015/day-04/: day-04.py
solutions/2015/day-05/: day-05.py
solutions/2015/day-06/: day-06.py
solutions/2015/day-07/: day-07.py
solutions/2015/day-08/: day-08.py
solutions/2015/day-09/: day-09.py
solutions/2015/day-10/: day-10.py
solutions/2015/day-11/: day-11.py
solutions/2015/day-12/: day-12.py
solutions/2015/day-13/: day-13.py
solutions/2015/day-14/: day-14.py
solutions/2015/day-15/: day-15.py
solutions/2015/day-16/: day-16.py
solutions/2015/day-17/: day-17.py
solutions/2015/day-18/: day-18.py
solutions/2015/day-19/: day-19.py
solutions/2015/day-20/: day-20.py
solutions/2015/day-21/: day-21.py
solutions/day-01/: day-01.py  readme.md
solutions/day-02/: day-02.py  readme.md
solutions/day-04/: readme.md
solutions/day-05/: day-05.py
solutions/day-06/: day-06.py
solutions/day-07/: readme.md
solutions/day-08/: day-08.py  readme.md
solutions/day-10/: readme.md
solutions/day-11/: day-11.py
solutions/day-12/: readme.md
solutions/day-13/: day-13.py  readme.md
(+115 files in other folders)
