[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Ruff already discovers *.py and *.ipynb by default in recent versions,
# so you can usually omit `include`.
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501", # let the formatter deal with long lines, if you care
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # example pytest assertion rule

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
